--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "devDependencies": {
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "reactjs": "^1.0.0",
     "tailwindcss": "^3.1.5",
     "vite": "^2.9.14"
   }
